--- a/styles/components/bloco.css
+++ b/styles/components/bloco.css
@@ -73,3 +73,40 @@
     font-size: 2vh;
 
 }
+
+@media screen and (max-width: 450px)
+{
+
+    .container{
+
+        margin: 10px;
+        padding: 5vh;
+
+    }
+
+    .container h2{
+
+        font-size: 3vh;
+
+    }
+
+    .container input{
+
+        font-size: 1.5vh;
+
+    }
+
+    .container button{
+
+        font-size: 1.5vh;
+
+    }
+
+    .container p{
+
+        font-size: 1.5vh;
+
+    }
+
+
+}
